[package]
name = "evtxtools"
version = "1.1.0"
edition = "2021"
author = "Jan Starke <jan.starke@posteo.de>"
license = "GPL-3.0"
description = "tools for the analysis of evtx files"
repository = "https://github.com/janstarke/evtxtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libevtx"
path = "src/lib.rs"

[[bin]]
name = "evtxscan"
path = "src/evtxscan.rs"

[[bin]]
name = "evtxcat"
path = "src/evtxcat.rs"

[[bin]]
name = "evtxls"
path = "src/evtxls.rs"


[dependencies]
clap={version="3.1", features=["derive", "cargo"]}
evtx="0.7"
anyhow="1"
chrono = "0.4"
colored_json = "2.1"
serde_json = "1"
term-table = "1.3"
termsize = "0.1"