[package]
name = "evtxtools"
version = "1.5.0"
edition = "2021"
author = "Jan Starke <jan.starke@posteo.de>"
license = "GPL-3.0"
description = "tools for the analysis of evtx files"
repository = "https://github.com/janstarke/evtxtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libevtx"
path = "src/lib.rs"

[[bin]]
name = "evtxscan"
path = "src/evtxscan.rs"

[[bin]]
name = "evtxcat"
path = "src/evtxcat.rs"

[[bin]]
name = "evtxls"
path = "src/evtxls.rs"

[[bin]]
name = "evtxanalyze"
path = "src/evtxanalyze.rs"


[dependencies]
clap={version="4", features=["derive", "cargo"]}
clap-verbosity-flag = {version="2.0.0"}
evtx="0.8"
anyhow="1"
chrono = "0.4"
colored_json = "3"
serde_json = "1"
serde = "1"
term-table = "1.3"
termsize = "0.1"
log = "0.4"
simplelog = "0.12"
regex = "1"
colored = "2"
lazy-regex = "2"